--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,8 @@ markdown_extensions:
   - footnotes
   - pymdownx.critic
   - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
