OZ-450: Some more adjustments

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ repo_name: ozone-his/ozone
 nav:
   - Implementers:
     - Quick Start: 'index.md'
-    - Manual Setup: 'manual-setup.md'
+    - Implementer Guide: 'impl-guide.md'
   - Users:
     - Overview: 'users/overview.md'
     - Single Sign-on: 'users/sso.md'
