OZ-468: Add docs to create own distribution. (#4)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,8 @@ repo_name: ozone-his/ozone
 nav:
   - Implementers:
     - Quick Start: 'index.md'
-    - Implementer Guide: 'impl-guide.md'
+    - Create Your Own Distribution: 'create-distro.md'
+    - Override Inherited Configs: 'override-configs.md'
   - Users:
     - Overview: 'users/overview.md'
     - Single Sign-on: 'users/sso.md'
