OZ-340: Use `homepage` macro instead of plain URL.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,3 +70,6 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
+plugins:
+  - search
+  - macros
