--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
           key: mkdocs-material-${{ env.cache_id }}
           path: .cache
           restore-keys: |
-            mkdocs-material-
-      - run: pip install mkdocs-material 
+            mkdocs-material-            
+      - run: pip install mkdocs-material
+      - run: pip install mkdocs-macros-plugin
       - run: mkdocs gh-deploy --force
