--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - System Implementers:
     - Quick Start: 'index.md'
     - Create Your Own Distribution: 'create-distro.md'
+    - "<span style='color:#b0b0b0;font-style:italic'>Override Inherited Configs</span>": 'override-configs.md'
     - "<span style='color:#b0b0b0;font-style:italic'>Override Inherited Configs</span>": 'override-docker-services.md'
     - "<span style='color:#b0b0b0;font-style:italic'>Configuration Points</span>": 'config-points.md'
   - Functional Users:
