OZ-340: Setting `site_url` to ensure sitemap.xml generation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Docs
+site_url: https://docs.ozone-his.com
 repo_url: https://github.com/ozone-his/ozone-distro
 repo_name: ozone-his/ozone
 nav:
