--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
     - Architecture Overview: 'devs/index.md'
     - "<span style='color:#b0b0b0;font-style:italic'>Camel Components</span>": 'devs/camel-components.md'
     - EIP Client: 'devs/eip-client.md'
+    - "<span style='color:#b0b0b0;font-style:italic'>Conventions</span>": 'devs/conventions.md'
     - Automated E2E Tests: 'devs/e2e-tests.md'
 theme:
   name: material
