OZ-279: How to customize distro + enabling/disabling components.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,8 +6,10 @@ nav:
   - System Implementers:
     - Quick Start: 'index.md'
     - Create Your Own Distribution: 'create-distro.md'
-    - "<span style='color:#b0b0b0;font-style:italic'>Override Inherited Configs</span>": 'override-configs.md'
-    - "<span style='color:#b0b0b0;font-style:italic'>Configuration Points</span>": 'config-points.md'
+    - Customizing Ozone HIS: 'customize-ozone.md'
+    - Enabling & Disabling HIS Components: 'enabling-components.md'
+    - "<span style='color:#b0b0b0;font-style:italic'>Configuring HIS Components</span>": 'configuring-components.md'
+    - "<span style='color:#b0b0b0;font-style:italic'>EIP Configuration Points</span>": 'eip-config-points.md'
   - Functional Users:
     - Overview: 'users/index.md'
     - "<span style='color:#b0b0b0;font-style:italic'>SSO & Auth</span>": 'users/auth.md'
