--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
     - Enabling & Disabling HIS Components: 'enabling-components.md'
     - "<span style='color:#b0b0b0;font-style:italic'>Configuring HIS Components</span>": 'configuring-components.md'
     - "<span style='color:#b0b0b0;font-style:italic'>EIP Configuration Points</span>": 'eip-config-points.md'
+    - "<span style='color:#b0b0b0;font-style:italic'>Preparing for Prod</span>": 'prepare-for-prod.md'
   - Functional Users:
     - Overview: 'users/index.md'
     - "<span style='color:#b0b0b0;font-style:italic'>SSO & Auth</span>": 'users/auth.md'
