--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,12 +4,12 @@ repo_url: https://github.com/ozone-his/ozone-distro
 repo_name: ozone-his/ozone
 nav:
   - System Implementers:
-    - Quick Start: 'foo.md'
+    - Quick Start: 'index.md'
     - Create Your Own Distribution: 'create-distro.md'
     - Customizing Ozone HIS: 'customize-ozone.md'
     - Enabling & Disabling HIS Components: 'enabling-components.md'
     - "<span style='color:#b0b0b0;font-style:italic'>Configuring HIS Components</span>": 'configuring-components.md'
-    - "<span style='color:#b0b0b0;font-style:italic'>EIP Configuration Points</span>": 'eip-config-points.md'
+    - "<span style='color:#b0b0b0;font-style:italic'>EIP Configuration Points</span>": 'auto-eip-config-points.md'
   - Functional Users:
     - Overview: 'users/index.md'
     - "<span style='color:#b0b0b0;font-style:italic'>SSO & Auth</span>": 'users/auth.md'
