OZ-558: Config points page auto-generation from EIP projects application.properties URLs. (#22)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ nav:
     - Customizing Ozone HIS: 'customize-ozone.md'
     - Enabling & Disabling HIS Components: 'enabling-components.md'
     - "<span style='color:#b0b0b0;font-style:italic'>Configuring HIS Components</span>": 'configuring-components.md'
-    - "<span style='color:#b0b0b0;font-style:italic'>EIP Configuration Points</span>": 'eip-config-points.md'
+    - "<span style='color:#b0b0b0;font-style:italic'>EIP Configuration Points</span>": 'auto-eip-config-points.md'
   - Functional Users:
     - Overview: 'users/index.md'
     - "<span style='color:#b0b0b0;font-style:italic'>SSO & Auth</span>": 'users/auth.md'
@@ -83,3 +83,6 @@ markdown_extensions:
 plugins:
   - search
   - macros
+  - gen-files:
+      scripts:
+        - gen_pages.py
