--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
     - Keycloak-OpenMRS Flows: 'users/keycloak-openmrs.md'
     - Keycloak-Superset Flows: 'users/keycloak-superset.md'
     - Odoo–OpenMRS Flows: 'users/odoo-openmrs.md'
+    - OpenMRS-Orthanc Flows: 'users/openmrs-orthanc.md'
     - OpenMRS-SENAITE Flows: 'users/openmrs-senaite.md'
     - "<span style='color:#b0b0b0;font-style:italic'>Ozone Analytics</span>": 'users/analytics.md'
   - Software Developers:
