--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ nav:
   - System Implementers:
     - Introduction: 'implementers/intro.md'
     - <span style='color:#141324;font-weight:bold;'>Evaluate</span>:
-      - <span style='color:36464e'>Quick Start: 'implementers/quick-start.md'
+      - <span style='color:36464e'>Getting Started: 'implementers/getting-started.md'
     - <span style='color:#141324;font-weight:bold;'>Adopt Ozone:
       - <span style='color:36464e'>Create Your Own Distribution: 'implementers/create-distro.md'
       - <span style='color:36464e'>Configure Apps: 'implementers/configure-apps.md'
@@ -98,3 +98,9 @@ markdown_extensions:
 plugins:
   - search
   - macros
+  - mkdocs-video:
+      video_autoplay: True
+      video_loop: True
+      css_style:
+        width: "100%"
+        height: "38vw"
