Set landing page and add recording

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,19 +4,24 @@ repo_url: https://github.com/ozone-his/ozone-distro
 repo_name: ozone-his/ozone
 nav:
   - Getting Started:
-    - Online Demo: getting-started/online-demo.md
-    - Locally: getting-started/run-locally.md
-    - In Gitpod: getting-started/run-in-gitpod.md
+    - Access Online Demo: getting-started/online-demo.md
+    - Run Locally: getting-started/run-locally.md
+    - Run In Gitpod: getting-started/run-in-gitpod.md
   - System Implementers:
     - Introduction: 'implementers/intro.md'
     - <span style='color:#141324;font-weight:bold;'>Evaluate</span>:
       - <span style='color:36464e'>Getting Started: 'implementers/getting-started.md'
-    - <span style='color:#141324;font-weight:bold;'>Adopt Ozone:
+
+    - <span style='color:#141324;font-weight:bold;'>Adopt</span>:
       - <span style='color:36464e'>Create Your Own Distribution: 'implementers/create-distro.md'
       - <span style='color:36464e'>Configure Apps: 'implementers/configure-apps.md'
       - <span style='color:#b0b0b0;font-style:italic'/>Configure Integrations: 'implementers/configure-integrations.md'
       - <span style='color:36464e'>Enable & Disable Apps and Integrations: 'implementers/enabling-apps.md'
-    - <span style='color:#141324;font-weight:bold;'>Deploy:
+      - <span style='color:36464e'>Enable & Disable Single Sign-On: 'implementers/enable-sso.md'
+      - <span style='color:36464e'>Enable & Disable Central Authorization: 'implementers/enable-sso.md'
+      - <span style='color:36464e'>Enable & Disable Apps and Integrations: 'implementers/enabling-apps.md'
+
+    - <span style='color:#141324;font-weight:bold;'>Deploy</span>:
       - <span style='color:#b0b0b0;font-style:italic'/>Start & Stop: 'implementers/start-stop.md'
       - <span style='color:#b0b0b0;font-style:italic'/>Backup & Restore: 'implementers/backup-restore.md'
       - <span style='color:#b0b0b0;font-style:italic'/>Monitor: 'implementers/monitor.md'
