--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ nav:
   - System Implementers:
     - Introduction: 'implementers/intro.md'
     - <span style='color:#141324;font-weight:bold;'>Evaluate</span>:
-      - <span style='color:36464e'>Getting Started: 'implementers/getting-started.md'
+      - <span style='color:36464e'>The Ozone Demo: 'implementers/ozone-demo.md'
 
     - <span style='color:#141324;font-weight:bold;'>Adopt</span>:
       - <span style='color:36464e'>Create Your Own Distribution: 'implementers/create-distro.md'
