--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
       - <span style='color:36464e'>The Ozone Demo: 'implementers/ozone-demo.md'
 
     - <span style='color:#141324;font-weight:bold;'>Adopt</span>:
+      - <span style='color:36464e'>Branding Applications: 'implementers/branding-apps.md'
       - <span style='color:36464e'>Create Your Own Distribution: 'implementers/create-distro.md'
       - <span style='color:36464e'>Configure Apps: 'implementers/configure-apps.md'
       - <span style='color:36464e'>Configure Integrations: 'auto-eip-config-points.md'
